# rm_vision

./: .gitignore  README.md
armor_detector/src/: detector_node.cpp
auto_aim/armor_tracker/src/: tracker_node.cpp
auto_aim/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
auto_aim_interfaces/: CMakeLists.txt
auto_aim_interfaces/msg/: Aim.msg  GimbalCmd.msg
fdilink_ahrs_ROS2/: CMakeLists.txt  wheeltec_udev.sh
fdilink_ahrs_ROS2/include/: ahrs_driver.h
fdilink_ahrs_ROS2/src/: ahrs_driver.cpp
hardware/fdilink_ahrs_ROS2/launch/: ahrs_driver.launch.py
hardware/fdilink_ahrs_ROS2/src/: ahrs_driver.cpp
rm_serial_driver/: CMakeLists.txt
rm_serial_driver/config/: serial_driver.yaml
rm_serial_driver/include/rm_serial_driver/: packet.hpp  rm_serial_driver.hpp
rm_serial_driver/src/: rm_serial_driver.cpp
rm_vision_bringup/: package.xml
rm_vision_bringup/Configuration/: auto_aim.rules
rm_vision_bringup/boot/: auto_aim.sh  control.service  control.sh
rm_vision_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
rm_vision_bringup/launch/: ahrs_driver.launch.py  vision_bringup.launch.py
robot_tf/: CMakeLists.txt  package.xml
robot_tf/include/: SolveTrajectory.hpp
robot_tf/src/: SolveTrajectory.cpp
ros2-hik-camera/config/: camera_params.yaml
